ingress/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: ClusterIP
  selector:
    app: api-app
  ports:
    - port: 3000
      targetPort: 5678
