ingress/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
spec:
  type: ClusterIP
  selector:
    app: ui-app
  ports:
    - port: 80
      targetPort: 80
